--- a/lib/dedalo/tools/tool_sort/html/tool_sort_page.phtml
+++ b/lib/dedalo/tools/tool_sort/html/tool_sort_page.phtml
@@ -12,7 +12,7 @@
 	$html 	.= '<div class="tool_grid">';
 	
 		$html .= '<div class="tool_grid_left sgc_edit">';
-		$html .= $source_html;
+		#$html .= $source_html;
 		$html .= '</div>';//end tool_grid_left
 
 		$html .= '<div class="tool_grid_rigth sgc_edit">';
