Multiple fixes section group, etc.

--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -327,6 +327,12 @@
 	.component_image_edit {		
 		height: 10em;
     	//margin: 1em;
+    	background-size: contain;
+
+    	@media only screen and (min-width: 1920px) {
+    		height: 30em;
+
+    	}
 	}
 
 	
