--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -3,7 +3,7 @@ input, textarea {
 	//border: none;
 	padding:0.5em;
 	border: 1px solid #E0E0E0;
-    width: 100%;
+    width: 97%;
 }
 
 	
@@ -35,7 +35,7 @@ html {
 	.success {
 		//transition: background-color 0.3s ease;
 		//background-color: green !important;
-		animation: cssAnimation 1.5s ease-out;
+		animation: cssAnimation 1.7s ease-out;
 	}
 	@keyframes cssAnimation {
 	    //0%   {background-color: green !important;}
@@ -43,6 +43,10 @@ html {
 	    //100% {background-color: #F3F3F3 !important;}
 	    from { background-color: green; }
 	    to { background-color: rgb(230, 230, 230); }
+	}
+//loading
+	.loading {
+		opacity: 0.4;
 	}
 // hide
 	.hide {
