Tool sort multiple fixes

--- a/lib/dedalo/component_relation_related/css/component_relation_related.less
+++ b/lib/dedalo/component_relation_related/css/component_relation_related.less
@@ -166,3 +166,14 @@
 
 
 
+// component_relation_related_list
+	.component_relation_related_list {
+
+		&.red {
+			background-color: red;
+			width: 100%;
+			height: 80px;
+		}
+	}
+
+
