--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -330,8 +330,7 @@
     	background-size: contain;
 
     	@media only screen and (min-width: 1920px) {
-    		height: 30em;
-
+    	//	height: 30em;
     	}
 	}
 
