Added css icons

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -240,3 +240,14 @@
 		}
 	}
 
+
+// buttons with icons
+	.remove {
+		.fa-icon;
+  		.fas;
+  		&:before {
+			//content: @fa-var-user;
+			content: @fa-var-trash-alt;
+		}
+	}
+
