--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -35,9 +35,9 @@ html {
 	.success {
 		//transition: background-color 0.3s ease;
 		//background-color: green !important;
-		animation: cssAnimation 1.7s ease-out;
+		animation: success_animation 1.7s ease-out;
 	}
-	@keyframes cssAnimation {
+	@keyframes success_animation {
 	    //0%   {background-color: green !important;}
 	    //50%  {background-color: grey;}
 	    //100% {background-color: #F3F3F3 !important;}
