--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -1,4 +1,9 @@
 
+// fontawesome
+	@import "./fontawesome/less/fontawesome.less";
+	@import "./fontawesome/less/solid.less";
+	@import "./fontawesome/less/brands.less";
+
 // layout general
 	/**/
 	@import "layout/reset.less";
