Minor css changes

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -134,7 +134,7 @@
 						flex: 0 1;
 
 						>*{
-							margin: 0.5em;
+							margin: 0.365em;
 						}
 					}
 
@@ -245,6 +245,8 @@
 	.remove {
 		.fa-icon;
   		.fas;
+  		color: #a2a2a2;
+  		cursor: pointer;
   		&:before {
 			//content: @fa-var-user;
 			content: @fa-var-trash-alt;
