Text area fixes to use in tool_sort

--- a/lib/dedalo/component_text_area/css/component_text_area.less
+++ b/lib/dedalo/component_text_area/css/component_text_area.less
@@ -688,3 +688,10 @@ div.mce-tinymce.mce-fullscreen {
 		}
 	}
 	*/
+
+
+.component_text_area_list {
+	padding: 0.5em;
+    word-break: break-all;
+}
+
