--- a/lib/dedalo/tools/tool_sort/css/tool_sort.less
+++ b/lib/dedalo/tools/tool_sort/css/tool_sort.less
@@ -523,6 +523,16 @@ body {
 	}
 
 	
+// provisional para numisdata
+	.rows_container>.row_container {
+	    grid-template-columns: 50px 50px 1fr 1fr 150px 150px 95px 75px;
 
+	    >.column_cell {
+	    	//height: 100%;
+	    	//height: 100%;
+	    	//padding: 0.5em;
+	    	//outline: 1px solid rgba(238,238,238,.43921569);
+	    }
+	}
 
 
