Added tool sort component_autocomplete js

--- a/lib/dedalo/tools/tool_sort/css/tool_sort.less
+++ b/lib/dedalo/tools/tool_sort/css/tool_sort.less
@@ -288,7 +288,7 @@ body {
 						>img {
 							//height: 200px;
 							height: unset;
-							max-height: 80px; // 120
+							max-height: 150px; // 120
 							cursor: zoom-in;
 							object-fit: contain;
 						}
@@ -480,7 +480,7 @@ body {
 		}
 
 		>label {
-			margin-right: 0.75em;
+			//margin-right: 0.75em;
 		}		
 	}
 
@@ -525,7 +525,8 @@ body {
 	
 // provisional para numisdata
 	.rows_container>.row_container {
-	    grid-template-columns: 50px 50px 1fr 1fr 150px 150px 95px 75px;
+	    //grid-template-columns: 50px 50px 1fr 1fr 150px 150px 95px 75px;
+	    grid-template-columns: 50px 50px 1fr 1fr 270px 270px 85px 75px;
 
 	    >.column_cell {
 	    	//height: 100%;
