CSS layout fixes

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -326,16 +326,19 @@
 
 			>li {
 				//background-color: #D7B274;
-				padding-right: 1em;
+				//padding-right: 1em;
 				display: flex;
 				flex: 1 1 50%;
 				flex-wrap: nowrap;
-
 				
 
 				>label {
 					padding-left: 0.25em;
 					//padding-right: 0.5em;
+				}
+
+				>input {
+					margin-right: 0.5em;
 				}
 			}
 
