Add styles to the buttons of paginator

--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -9,7 +9,8 @@
 	@import "layout/reset.less";
 	@import "layout/fonts.less";
 	@import "layout/layout.less";
-	@import "layout/page.less";	
+	@import "layout/page.less";
+	@import "layout/paginator.less";
 
 // groupers
 	/**/
