add the component_autocomplete.less and service_autocomplete.less to the main.css

--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -17,12 +17,17 @@
 	@import "../../section_group/css/section_group.less";
 	@import "../../section_tab/css/section_tab.less";
 
+// services
+	@import "../../services/service_autocomplete/css/service_autocomplete.less";
+
+
 // components
 	/**/
 	@component_prefix : "component_";
 	@component_sufix  : "";
 	@import "../../@{component_prefix}input_text/css/@{component_prefix}input_text@{component_sufix}.less";
 	@import "../../@{component_prefix}autocomplete_hi/css/@{component_prefix}autocomplete_hi@{component_sufix}.less";
+	@import "../../@{component_prefix}autocomplete/css/@{component_prefix}autocomplete@{component_sufix}.less";
 	@import "../../@{component_prefix}av/css/@{component_prefix}av@{component_sufix}.less";
 	//@import "../../@{component_prefix}calculation/css/@{component_prefix}calculation@{component_sufix}.less";
 	@import "../../@{component_prefix}check_box/css/@{component_prefix}check_box@{component_sufix}.less";
