change the service_autocomplete to new css

--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -7,6 +7,46 @@
 
 
 
+	.component_autocomplete{
+		position: relative;
+	}
+	.autocomplete_searh_container {
+		position: absolute;
+		width: 100%;
+		top: 100%;
+		background-color: #ededed;
+
+	}
+
+	.autocomplete_input{
+		
+		background: #fff url("../../themes/default/search.svg") right center no-repeat;
+		background-size: auto 100%;
+		background-position: bottom -1px right 5px;
+
+	}
+
+	.autocomplete_data {
+		//position: absolute;
+		//top: 44px;
+		padding-top: 0.5em;
+	}
+	.autocomplete_data_li{
+		padding: 0.5em;
+		border-top: 0.07em solid #cdcdcd;
+		//padding: 1em;
+	}
+
+	.autocomplete_data_li:first-child {
+	  border-top: none;
+	}
+	.autocomplete_data_li:hover{
+		background-color: #aaa;
+	}
+
+
+
+
 // autocomplete_wrapper
 	.autocomplete_wrapper {
 		width: 100%;
