change the background of the section_group

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -164,7 +164,7 @@
 
 			>.label {
 				background-color: #949494;
-				background-image: url('../../themes/default/bg_black.png');
+				//background-image: url('../../themes/default/bg_black.png');
 				color: #ffffff;
 				padding: 1em;
 				cursor: pointer;
