CSS minor changes

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -205,7 +205,8 @@
 					flex: 1 0 calc(80% - 2em);
 					display: flex;
 					flex-wrap: wrap;
-					flex-flow: column; 
+					flex-flow: column;
+					align-items: flex-start;
 
 					>.inputs_container {
 						flex: 1 1 auto;
