--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -12,7 +12,7 @@
 <script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
 <script type="module" >
 	import {page} from "<?php echo DEDALO_LIB_BASE_URL ?>/page/js/page.js"
-	const current_page = new page(<?php echo $page_options_json ?>)
+	const current_page = new page(<?php echo json_encode($page_items) ?>)
 	current_page.init();
 </script>
 </html>
