CSS changes in menu

--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -145,6 +145,13 @@ background-color: #FFFF00;
 		padding: 0;
 		text-align: left;
 
+		// d6
+		//display: block;
+	    //width: 100%;
+	    //background-color: #BD0016;
+	    //height: 30px;
+	    //margin: 0;
+
 		li {
 			margin: 0 2px;
 			padding: 0 0 0px;
