--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -21,6 +21,10 @@
 	@import "../../services/service_autocomplete/css/service_autocomplete.less";
 
 
+// menu
+	@import "../../menu/css/menu.less";
+
+
 // components
 	/**/
 	@component_prefix : "component_";
